add my special projects overview

--- a/index.html
+++ b/index.html
@@ -1,61 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antor Hawlader Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            background-color: #1a1a1a;
-        }
-        a {
-            transition: color 0.3s;
-        }
-        a:hover {
-            color: #3b82f6;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Antor Hawlader Portfolio</title>
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="text-gray-200 font-sans">
-    <header class="text-center py-12">
-        <h1 class="text-5xl font-bold mb-2">Antor Hawlader</h1>
-        <p class="text-lg text-gray-400">Full-Stack MERN Developer | Android Developer | UI/UX Designer</p>
-    </header>
+<body class="bg-[#1a1a1a] text-gray-200 font-sans">
 
-    <section class="max-w-3xl mx-auto px-6 mb-12">
-        <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">About Me</h2>
-        <p class="text-gray-300 leading-relaxed">
-            I am a passionate Software Developer specializing in Full-Stack MERN, Android Development, and UI/UX Design.
-            For me, design is a top priority, no matter which stack or technology I use, I believe that a well-crafted design makes all the difference.
-            I also have experience building Windows-based intermediate software, combining functionality with clean and intuitive interfaces.
-            My goal is to create applications that are both powerful and user-friendly.
-        </p>
-    </section>
+<header class="text-center py-12">
+    <img src="https://avatars.githubusercontent.com/u/123496530?v=4" alt="Antor Hawlader" class="w-32 h-32 mx-auto rounded-full border-4 border-blue-500 mb-4">
+    <h1 class="text-5xl font-bold mb-2">Antor Hawlader</h1>
+    <p class="text-lg text-gray-400">Full-Stack MERN Developer | Android Developer | UI/UX Designer</p>
+</header>
 
-    <section class="max-w-3xl mx-auto px-6 mb-12">
-        <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">Skills</h2>
-        <div class="flex flex-wrap gap-3">
-            <span class="bg-gray-800 px-3 py-1 rounded-full">Java</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">C++</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">JavaScript</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">Python</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">MERN Stack</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">Android Development</span>
-            <span class="bg-gray-800 px-3 py-1 rounded-full">UI/UX Design</span>
+<section class="max-w-3xl mx-auto px-6 mb-12">
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">About Me</h2>
+    <p class="text-gray-300 leading-relaxed">
+        I am a passionate Software Developer specializing in Full-Stack MERN, Android Development, and UI/UX Design.
+        I also have experience building Windows-based software with clean, intuitive interfaces.
+        My goal is to create applications that are both powerful and user-friendly.
+    </p>
+</section>
+
+<section class="max-w-3xl mx-auto px-6 mb-12">
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">Skills</h2>
+    <div class="flex flex-wrap gap-3">
+        <span class="bg-gray-800 px-3 py-1 rounded-full">Java</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">C++</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">JavaScript</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">Python</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">MERN Stack</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">Android Development</span>
+        <span class="bg-gray-800 px-3 py-1 rounded-full">UI/UX Design</span>
+    </div>
+</section>
+
+<section class="max-w-5xl mx-auto px-6 mb-12">
+    <h2 class="text-2xl font-semibold mb-8 border-b border-gray-700 pb-2">Projects</h2>
+
+    <!-- ClassCR -->
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            ClassCR
+            <a href="https://github.com/AntorPi314/ClassCR" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Class management app with routine, posting, and special links functionality.</p>
+        <p class="text-gray-400 mb-2"><strong>Live:</strong> <a href="https://antorpi314.github.io/ClassCR/" target="_blank" class="text-blue-500">https://antorpi314.github.io/ClassCR/</a></p>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <img src="https://github.com/AntorPi314/ClassCR/blob/main/.idea/Group_1.png?raw=true" class="rounded shadow-lg">
+            <img src="https://github.com/AntorPi314/ClassCR/blob/main/.idea/Group_2.png?raw=true" class="rounded shadow-lg">
         </div>
-    </section>
+    </div>
 
-    <section class="max-w-3xl mx-auto px-6 mb-12">
-        <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">Links</h2>
-        <ul class="space-y-2">
-            <li><a href="https://github.com/antorpi314" target="_blank" class="text-blue-500 hover:text-blue-400">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/antor-hawlader/" target="_blank" class="text-blue-500 hover:text-blue-400">LinkedIn</a></li>
-        </ul>
-    </section>
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            SecurePass
+            <a href="https://github.com/AntorPi314/SecurePass" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Local password manager with encrypted storage. No cloud storage.</p>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mt-2">
+            <img src="https://github.com/AntorPi314/SecurePass/blob/main/ss/s3.png?raw=true" class="rounded shadow-lg">
+            <img src="https://github.com/AntorPi314/SecurePass/blob/main/ss/s1.png?raw=true" class="rounded shadow-lg">
+            <img src="https://github.com/AntorPi314/SecurePass/blob/main/ss/s2.png?raw=true" class="rounded shadow-lg">
+        </div>
+    </div>
 
-    <footer class="text-center py-6 border-t border-gray-700 text-gray-500">
-        &copy; 2025 Antor Hawlader. All rights reserved.
-    </footer>
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            SociaMart
+            <a href="https://github.com/AntorPi314/SociaMart" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Social eCommerce platform for buyers and shop owners to interact and sell products.</p>
+        <div class="flex flex-wrap gap-2 mb-2">
+            <a href="https://socia-mart.vercel.app/Easy" target="_blank" class="text-blue-500 underline">Easy</a>
+            <a href="https://socia-mart.vercel.app/Laptop" target="_blank" class="text-blue-500 underline">Laptop</a>
+            <a href="https://socia-mart.vercel.app/Bata" target="_blank" class="text-blue-500 underline">Bata</a>
+            <a href="https://socia-mart.vercel.app/MangoBD" target="_blank" class="text-blue-500 underline">MangoBD</a>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-2">
+            <img src="https://raw.githubusercontent.com/AntorPi314/SociaMart/main/screenshot/s1.png" class="rounded shadow-lg">
+            <img src="https://raw.githubusercontent.com/AntorPi314/SociaMart/main/screenshot/s2.png" class="rounded shadow-lg">
+        </div>
+    </div>
+
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            GWeb - Gallery Web
+            <a href="https://github.com/AntorPi314/GWeb" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Media-serving web app with encrypted video streaming and password-protected access.</p>
+        <p class="text-gray-400 mb-2"><strong>Demo:</strong> <a href="https://antorpi314.github.io/GWeb/Website" target="_blank" class="text-blue-500">Live Demo</a></p>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mt-2">
+            <img src="https://raw.githubusercontent.com/AntorPi314/GWeb/main/Screenshot/s1.png" class="rounded shadow-lg">
+            <img src="https://raw.githubusercontent.com/AntorPi314/GWeb/main/Screenshot/s2.jpg" class="rounded shadow-lg">
+            <img src="https://raw.githubusercontent.com/AntorPi314/GWeb/main/Screenshot/s3.jpeg" class="rounded shadow-lg">
+        </div>
+    </div>
+
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            FireDrive
+            <a href="https://github.com/AntorPi314/FireDrive" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Batch file upload, delete, URL copy, and more.</p>
+        <p class="text-gray-400 mb-2"><a href="https://www.youtube.com/watch?v=zcnF6nnCVrM" target="_blank" class="text-blue-500 underline">YouTube Demo</a></p>
+        <img src="https://github.com/AntorPi314/FireDrive/blob/main/img/Pic1.png?raw=true" class="rounded shadow-lg">
+    </div>
+
+    <div class="mb-10">
+        <h3 class="text-xl font-bold mb-2 flex items-center gap-2">
+            CyMono
+            <a href="https://github.com/AntorPi314/CyMono" target="_blank" class="px-3 py-1 rounded-full bg-gray-800 text-blue-400 text-xs font-semibold flex items-center justify-center">GitHub Link</a>
+        </h3>
+        <p class="text-gray-300 mb-2">Telegram channel-style app with add, delete, react features.</p>
+        <p class="text-gray-400 mb-2"><a href="https://youtu.be/IoCayUti5Yg" target="_blank" class="text-blue-500 underline">YouTube Overview</a></p>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mt-2">
+            <img src="https://github.com/AntorPi314/CyMono/blob/main/img/Pic1.png?raw=true" class="rounded shadow-lg">
+            <img src="https://github.com/AntorPi314/CyMono/blob/main/img/Pic2.png?raw=true" class="rounded shadow-lg">
+            <img src="https://github.com/AntorPi314/CyMono/blob/main/img/Pic3.png?raw=true" class="rounded shadow-lg">
+        </div>
+    </div>
+
+</section>
+
+<footer class="text-center py-6 border-t border-gray-700 text-gray-500">
+    &copy; 2025 Antor Hawlader. All rights reserved.
+</footer>
+
 </body>
 </html>
